--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="card-footer">
-                <a href="{{ url_for('docker.containers') }}" class="btn btn-sm btn-outline-success w-100">
+                <a href="{{ url_for('docker_api.containers') }}" class="btn btn-sm btn-outline-success w-100">
                     <i class="bi bi-box me-1"></i>Manage Containers
                 </a>
             </div>
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="card-footer">
-                <a href="{{ url_for('docker.images') }}" class="btn btn-sm btn-outline-info w-100">
+                <a href="{{ url_for('docker_api.images') }}" class="btn btn-sm btn-outline-info w-100">
                     <i class="bi bi-layers me-1"></i>View Images
                 </a>
             </div>
